<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="747dp"
        android:layout_marginBottom="2pt"
        android:layout_weight="1"
        android:background="@color/black"
        android:ems="10"
        android:gravity="right|center"
        android:inputType="textPersonName"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="20pt"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,LabelFor,RtlHardcoded"
        tools:visibility="visible" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
            android:id="@+id/buttonDivide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_marginEnd="1pt"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:onClick="operatorEvent"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/buttonMultiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="operatorEvent"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/buttonMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="operatorEvent"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/buttonPercent"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="percentEvent"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/buttonZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/buttonDot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="numberEvent"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/buttonPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="operatorEvent"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/buttonAC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/red"
                android:onClick="clearEvent"
                android:text="@string/C"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/buttonEqualTo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="equalsEvent"
                android:text="@string/equalto"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>